<resources>
    <string name="a11y_call_duration_format" formatted="false">%d %s %d %s</string>
    <string name="a11y_call_duration_short_format" formatted="false">%d %s</string>
    <string name="a11y_call_incoming_answer_description">Answer</string>
    <string name="a11y_call_incoming_decline_description">Decline</string>
    <string name="a11y_description_incall_label_manage_content">Manage callers</string>
    <string name="a11y_description_incoming_call_answer_and_release">Answer and end ongoing call</string>
    <string name="a11y_description_incoming_call_answer_video_as_audio">Answer as audio call</string>
    <string name="a11y_description_incoming_call_reject_with_sms">Reject with message</string>
    <string name="a11y_incoming_call_answer_and_release">Answer and end ongoing call</string>
    <string name="a11y_incoming_call_answer_video_as_audio">Answer as audio call</string>
    <string name="a11y_incoming_call_reject_with_sms">Reject this call with a message</string>
    <string name="a11y_incoming_call_swipe_gesture_prompt">Two finger swipe up to answer. Two finger swipe down to decline.</string>
    <string name="a11y_incoming_call_swipe_to_answer">Swipe up with two fingers to answer or down to reject the call</string>
    <string name="aac_format">AAC</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_build_version">Build version</string>
    <string name="about_open_source_licenses">Open source licenses</string>
    <string name="about_open_source_licenses_summary">License details for open source software</string>
    <string name="about_phone_label">About</string>
    <string name="about_privacy_policy">Privacy policy</string>
    <string name="about_terms_of_service">Terms of service</string>
    <string name="accessibility_settings_title">Accessibility</string>
    <string name="account_phone">Device-only, unsynced</string>
    <string name="actionIncomingCall">Incoming calls</string>
    <string name="action_block_number">Block number</string>
    <string name="action_copy_number_text">Copy number</string>
    <string name="action_edit_number_before_call">Edit number before call</string>
    <string name="action_menu_back_from_search">stop searching</string>
    <string name="action_menu_call_history_description">Call history</string>
    <string name="action_menu_dialpad_button">key pad</string>
    <string name="action_menu_overflow_description">More options</string>
    <string name="action_report_number">Report inaccurate number</string>
    <string name="action_unblock_number">Unblock number</string>
    <string name="activity_not_available">No app for that on this device</string>
    <string name="activity_title_licenses">Open source licenses</string>
    <string name="activity_title_settings">Settings</string>
    <string name="addBlockedNumber">Add number</string>
    <string name="add_2sec_pause">Add 2-sec pause</string>
    <string name="add_contact_not_available">No contacts app available</string>
    <string name="add_wait">Add wait</string>
    <string name="all_contacts_empty">"You don't have any contacts yet"</string>
    <string name="all_contacts_empty_add_contact_action">Create new contact</string>
    <string name="allow">Allow</string>
    <string name="alreadyBlocked">%1$s is already blocked.</string>
    <string name="always_warn">Show warning every time</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applicationLabel">Phone</string>
    <string name="audioroute_bluetooth">Bluetooth</string>
    <string name="audioroute_headset">Wired headset</string>
    <string name="audioroute_phone">Phone</string>
    <string name="audioroute_speaker">Speaker</string>
    <string name="block_list">Blocked numbers</string>
    <string name="block_number_alert_details">%1$s This call will be reported as spam.</string>
    <string name="block_number_confirmation_message_new_filtering">You will no longer receive calls or texts from this number.</string>
    <string name="block_number_confirmation_message_no_vvm">Calls from this number will be blocked, but the caller may still be able to leave you voicemails.</string>
    <string name="block_number_confirmation_message_vvm">Calls from this number will be blocked and voicemails will be automatically deleted.</string>
    <string name="block_number_confirmation_title">Block %1$s?</string>
    <string name="block_number_footer_message_no_vvm">Calls from these numbers will be blocked, but they may still be able to leave you voicemails.</string>
    <string name="block_number_footer_message_vvm">Calls from these numbers will be blocked and voicemails will be automatically deleted.</string>
    <string name="block_number_ok">BLOCK</string>
    <string name="block_number_search_hint">Add number or search contacts</string>
    <string name="block_number_undo">UNDO</string>
    <string name="block_report_number_alert_details">You will no longer receive calls from this number.</string>
    <string name="block_report_number_alert_title">Block %1$s?</string>
    <string name="blocked_call_settings_import_button">Import</string>
    <string name="blocked_call_settings_import_description">You previously marked some callers to be automatically sent to voicemail via other apps.</string>
    <string name="blocked_call_settings_view_numbers_button">View Numbers</string>
    <string name="blocked_number_call_log_label">Blocked</string>
    <string name="blocked_numbers_disabled_emergency_desc">Call blocking has been disabled because you contacted emergency services from this phone within the last 48 hours. It will be automatically reenabled once the 48 hour period expires.</string>
    <string name="blocked_numbers_disabled_emergency_header_label">Call blocking temporarily off</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="build_version_key">build_version</string>
    <string name="build_version_label">Build version</string>
    <string name="business_contact_context_title">Business info</string>
    <string name="caching_vcard_message">Caching vCard(s) to local temporary storage. The actual import will start soon.</string>
    <string name="caching_vcard_title">Caching</string>
    <string name="call">Call</string>
    <string name="callDetailsDurationFormat" formatted="false">%s min %s sec</string>
    <string name="callDetailsShortDurationFormat">%s sec</string>
    <string name="callFailed_simError">No SIM or SIM error</string>
    <string name="callHistoryIconLabel">Call history</string>
    <string name="call_assistant">Call %s</string>
    <string name="call_blocking_disabled_notification_text">Disabled because an emergency call was made.</string>
    <string name="call_blocking_disabled_notification_title">Call blocking disabled for 48 hours</string>
    <string name="call_by_shortcut">%s (Call)</string>
    <string name="call_callback">Call callback</string>
    <string name="call_car">Call car</string>
    <string name="call_company_main">Call company main</string>
    <string name="call_composer_connection_failed">"%1$s is offline and can't be reached"</string>
    <string name="call_custom">Call %s</string>
    <string name="call_detail_list_header">Calls list</string>
    <string name="call_details">Call details</string>
    <string name="call_details_copy_number">Copy number</string>
    <string name="call_details_edit_number">Edit number before call</string>
    <string name="call_details_minutes_abbreviation">m</string>
    <string name="call_details_report_call_id">Report inaccurate number</string>
    <string name="call_details_seconds_abbreviation">s</string>
    <string name="call_disambig_title">Choose number</string>
    <string name="call_duration_format_pattern" formatted="false">"%s'%s' %s'%s'"</string>
    <string name="call_duration_short_format_pattern" formatted="false">"%s'%s'"</string>
    <string name="call_fax_home">Call home fax</string>
    <string name="call_fax_work">Call work fax</string>
    <string name="call_home">Call home</string>
    <string name="call_incoming_answer">Answer</string>
    <string name="call_incoming_audio_handset">Handset</string>
    <string name="call_incoming_audio_speakerphone">Speakerphone</string>
    <string name="call_incoming_custom_message_cancel">Cancel</string>
    <string name="call_incoming_custom_message_send">Send</string>
    <string name="call_incoming_decline">Decline</string>
    <string name="call_incoming_default_label_answer_and_release_second">Swipe up to answer and hold ongoing call</string>
    <string name="call_incoming_default_label_answer_and_release_third">Swipe up to answer and end call on hold</string>
    <string name="call_incoming_important">Important</string>
    <string name="enable_forward_lookup_summary">Show nearby places when searching in the dialer</string>
    <string name="enable_forward_lookup_title">Forward lookup</string>
    <string name="enable_people_lookup_summary">Show online results for people when searching in the dialer</string>
    <string name="enable_people_lookup_title">People lookup</string>
    <string name="enable_reverse_lookup_summary">Look up information about the person or place for unknown numbers on incoming calls</string>
    <string name="enable_reverse_lookup_title">Reverse lookup</string>
    <string name="forward_lookup_provider_title">Forward lookup provider</string>
    <string name="lookup_disclaimer">"Lookups may send queries over a secure protocol (https) to remote websites to gather information. The query may include the other party's phone number or the search query"</string>
    <string name="people_lookup_provider_title">People lookup provider</string>
    <string name="reverse_lookup_provider_title">Reverse lookup provider</string>
</resources>